fix animation after way too much time spent on codepen adjusting things

--- a/stylesheets/scss/layout/_footer.scss
+++ b/stylesheets/scss/layout/_footer.scss
@@ -7,6 +7,6 @@
   .icons {
     align-self: center;
     font-size: 2em;
-    padding: 1vh;
+    padding: 2vh;
   }
 }
