--- a/stylesheets/scss/main.scss
+++ b/stylesheets/scss/main.scss
@@ -8,15 +8,18 @@ body {
 }
 
 .container {
-  border: 4px solid $secondary-color;
   box-sizing: border-box;
-  position: relative;
+  position: absolute;
   background-color: transparent;
+  height: 100%;
+  width: 100%;
+  margin-left: 20px;
+
 
   &::before,
   &::after {
-    z-index: 1;
-    border: 4px solid transparent;
+    // z-index: 20;
+    border: 10px solid transparent;
     box-sizing: border-box;
     content: '';
     position: absolute;
@@ -28,15 +31,17 @@ body {
   &::before {
     top: 0;
     left: 0;
-    animation: border-before 1.5s infinite;
+    animation: border-before 1.5s normal;
     animation-direction: alternate;
+    animation-fill-mode: forwards;
   }
 
   &::after {
     bottom: 0;
     right: 0;
-    animation: border-after 1.5s infinite;
+    animation: border-after 1.5s normal;
     animation-direction: alternate;
+    animation-fill-mode: forwards;
   }
 }
 
@@ -82,8 +87,8 @@ body {
   49% {
     width: 0;
     height: 0;
-    border-top-color: transparent;
-    border-right-color: transparent;
+    border-left-color: transparent;
+    border-bottom-color: transparent;
   }
   50% {
     width: 0;
@@ -91,15 +96,15 @@ body {
     border-left-color: transparent;
     border-bottom-color: $secondary-color;
   }
-  74% {
+  74.99% {
     border-left-color: transparent;
     border-bottom-color: $secondary-color;
   }
   75% {
-    width: 100%;
     height: 0;
-    border-top-color: $secondary-color;
-    border-right-color: $secondary-color;
+    width: 100%;
+    border-left-color: $secondary-color;
+    border-bottom-color: $secondary-color;
   }
   100% {
     width: 100%;
